src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void* cv_dnn_readNet_0(const char* model, const char* config, const char* framework, int engine);
extern "C" __declspec(dllexport) void* cv_dnn_readNet_1(const char* framework, void* bufferModel, void* bufferConfig, int engine);
extern "C" __declspec(dllexport) void* cv_dnn_readNetFromModelOptimizer_0(const char* xml, const char* bin);
extern "C" __declspec(dllexport) void* cv_dnn_readNetFromModelOptimizer_1(void* bufferModelConfig, void* bufferWeights);
extern "C" __declspec(dllexport) void* cv_dnn_readNetFromONNX_0(const char* onnxFile, int engine);
extern "C" __declspec(dllexport) void* cv_dnn_readNetFromONNX_1(void* buffer, int engine);
extern "C" __declspec(dllexport) void* cv_dnn_readTensorFromONNX_0(const char* path);
extern "C" __declspec(dllexport) void* cv_dnn_blobFromImage_0(void* image, double scalefactor, cv::Size size, cv::Scalar mean, bool swapRB, bool crop, int ddepth);
extern "C" __declspec(dllexport) void* cv_dnn_blobFromImages_0(void* images, double scalefactor, cv::Size size, cv::Scalar mean, bool swapRB, bool crop, int ddepth);
extern "C" __declspec(dllexport) void* cv_dnn_blobFromImageWithParams_0(void* image, void* param);
extern "C" __declspec(dllexport) void cv_dnn_blobFromImageWithParams_1(void* image, void* blob, void* param);
extern "C" __declspec(dllexport) void* cv_dnn_blobFromImagesWithParams_0(void* images, void* param);
extern "C" __declspec(dllexport) void cv_dnn_blobFromImagesWithParams_1(void* images, void* blob, void* param);
extern "C" __declspec(dllexport) void cv_dnn_imagesFromBlob_0(void* blob_, void* images_);
extern "C" __declspec(dllexport) void cv_dnn_writeTextGraph_0(const char* model, const char* output);
extern "C" __declspec(dllexport) void cv_dnn_NMSBoxes_0(void* bboxes, void* scores, float score_threshold, float nms_threshold, void* indices, float eta, int top_k);
extern "C" __declspec(dllexport) void cv_dnn_NMSBoxesBatched_0(void* bboxes, void* scores, void* class_ids, float score_threshold, float nms_threshold, void* indices, float eta, int top_k);
extern "C" __declspec(dllexport) void cv_dnn_softNMSBoxes_0(void* bboxes, void* scores, void* updated_scores, float score_threshold, float nms_threshold, void* indices, size_t top_k, float sigma, int method);
extern "C" __declspec(dllexport) const char* cv_dnn_getInferenceEngineBackendType_0();
extern "C" __declspec(dllexport) const char* cv_dnn_setInferenceEngineBackendType_0(const char* newBackendType);
extern "C" __declspec(dllexport) void cv_dnn_resetMyriadDevice_0();
extern "C" __declspec(dllexport) const char* cv_dnn_getInferenceEngineVPUType_0();
extern "C" __declspec(dllexport) const char* cv_dnn_getInferenceEngineCPUType_0();
extern "C" __declspec(dllexport) void cv_dnn_releaseHDDLPlugin_0();