src/OpenCV5Sharp/Generated/NativeMethods.Dnn.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_readNet_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, [MarshalAs(UnmanagedType.LPUTF8Str)] string? config, [MarshalAs(UnmanagedType.LPUTF8Str)] string? framework, int engine);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_readNet_1([MarshalAs(UnmanagedType.LPUTF8Str)] string? framework, IntPtr bufferModel, IntPtr bufferConfig, int engine);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_readNetFromModelOptimizer_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? xml, [MarshalAs(UnmanagedType.LPUTF8Str)] string? bin);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_readNetFromModelOptimizer_1(IntPtr bufferModelConfig, IntPtr bufferWeights);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_readNetFromONNX_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? onnxFile, int engine);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_readNetFromONNX_1(IntPtr buffer, int engine);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_readTensorFromONNX_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? path);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_blobFromImage_0(MatHandle image, double scalefactor, Size size, Scalar mean, [MarshalAs(UnmanagedType.U1)] bool swapRB, [MarshalAs(UnmanagedType.U1)] bool crop, int ddepth);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_blobFromImages_0(IntPtr images, double scalefactor, Size size, Scalar mean, [MarshalAs(UnmanagedType.U1)] bool swapRB, [MarshalAs(UnmanagedType.U1)] bool crop, int ddepth);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_blobFromImageWithParams_0(MatHandle image, IntPtr param);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_dnn_blobFromImageWithParams_1(MatHandle image, MatHandle blob, IntPtr param);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_blobFromImagesWithParams_0(IntPtr images, IntPtr param);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_dnn_blobFromImagesWithParams_1(IntPtr images, MatHandle blob, IntPtr param);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_dnn_imagesFromBlob_0(MatHandle blob_, IntPtr images_);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_dnn_writeTextGraph_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, [MarshalAs(UnmanagedType.LPUTF8Str)] string? output);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_dnn_NMSBoxes_0(IntPtr bboxes, IntPtr scores, float score_threshold, float nms_threshold, IntPtr indices, float eta, int top_k);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_dnn_NMSBoxesBatched_0(IntPtr bboxes, IntPtr scores, IntPtr class_ids, float score_threshold, float nms_threshold, IntPtr indices, float eta, int top_k);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_dnn_softNMSBoxes_0(IntPtr bboxes, IntPtr scores, IntPtr updated_scores, float score_threshold, float nms_threshold, IntPtr indices, long top_k, float sigma, int method);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_getInferenceEngineBackendType_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_setInferenceEngineBackendType_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? newBackendType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_dnn_resetMyriadDevice_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_getInferenceEngineVPUType_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_getInferenceEngineCPUType_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_dnn_releaseHDDLPlugin_0();
    }
}
